# bland-circuit-simulator

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: engine-ci.yml
docs/: API_CONTRACT.md  ENGINE_CONTRACT.md
engine-cpp/: .clang-format  CMakeLists.txt  DOCS.md  Dockerfile
engine-cpp/src/: main.cpp
engine-cpp/src/api/: handlers.cpp  handlers.hpp
engine-cpp/src/core/: circuit.hpp  errors.hpp  solver.cpp  solver.hpp  types.hpp
engine-cpp/src/parser/: netlist_parser.cpp  netlist_parser.hpp
engine-cpp/src/utils/: logger.cpp  logger.hpp
java-ecosystem/: pom.xml
java-ecosystem/backend-spring/: pom.xml
java-ecosystem/backend-spring/src/main/java/pl/polsl/bland/backend/: BackendApplication.java
java-ecosystem/backend-spring/src/main/resources/: application.properties
java-ecosystem/desktop-javafx/: pom.xml
java-ecosystem/desktop-javafx/src/main/java/pl/polsl/bland/desktop/: DesktopApp.java
java-ecosystem/shared-models/: pom.xml
java-ecosystem/shared-models/src/main/java/pl/polsl/bland/models/: CircuitElement.java  CircuitSchematic.java  NetlistParser.java  SimulationRequest.java  SimulationResult.java  UserDto.java  Wire.java
java-ecosystem/web-app/: pom.xml
java-ecosystem/web-app/frontend/themes/bland-simulator/: styles.css
java-ecosystem/web-app/src/main/java/pl/polsl/bland/webapp/: AppShell.java  WebApplication.java
java-ecosystem/web-app/src/main/resources/: application.properties
tests/: engine_test.py  integration_test.py  mostek.netlist  plot.py
tests/bcs-files/: drabinka.bcs  filtr.bcs  float64.bcs  linia.bcs  lrc.bcs  rezonans.bcs  zwarcie.bcs
vscode-extension/: README.md  language-configuration.json  package.json
vscode-extension/snippets/: bcs.json
vscode-extension/src/: extension.js
vscode-extension/syntaxes/: bsc.tmLanguage.json
(+40 files in other folders)
